Bug 878931: Add a FontSizeInflation() method to Element in order to retrieve font size inflation to use during reflow-on-zoom. [r=kats,mounir] The reflow-on-zoom behavior needs a more robust determination of the font size inflation, so that it can adjust its behavior depending on whether font size inflation has been enabled for a given element's text. This patch also modifies the behavior of reflow- on-zoom such that it will zoom in to piece of text, with reflow, if the minimum specified font size in the font size inflation preferences is greater than the current font size, with font size inflation, of the element.